# cointui

./: CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-02-25-stats-redesign-design.md  2026-02-25-stats-redesign.md
src/: app.rs  config.rs  error.rs  event.rs  lib.rs  main.rs
src/ai/: mod.rs  ollama.rs  prompts.rs
src/cli/: add.rs  ask.rs  backup.rs  export.rs  import.rs  insights.rs  mod.rs  report.rs  sync_email.rs  tags.rs
src/db/: budget_repo.rs  connection.rs  email_repo.rs  mod.rs  recurring_repo.rs  tag_repo.rs  transaction_repo.rs
src/domain/: models.rs
src/email/: imap_client.rs  mod.rs  sync.rs
src/email/parsers/: cmr_falabella.rs  mod.rs  pedidosya.rs  santander.rs  scotiabank.rs  uber.rs
src/ui/: mod.rs  theme.rs
src/ui/views/: budget.rs  dashboard.rs  filter_form.rs  form.rs  help.rs  mod.rs  recurring.rs  stats.rs  tags.rs  transactions.rs
