[package]
name = "cointui"
version = "0.1.0"
edition = "2024"
description = "A terminal-based personal finance manager"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
csv = "1.3"
directories = "6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
